// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentCard/> render should render the comment card 1`] = `
<div
  className="commentCard card"
>
  <CardBody
    tag="div"
  >
    <div
      className="row"
    >
      <div
        className="col-1 avatarContainer"
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
          url=""
        />
      </div>
      <div
        className="col-11"
      >
        <div
          className="row flexContainerRow metaInfo"
        >
          <span
            className="customerNameBody"
          >
            some_sender_firstname
             
            some_sender_lastname
          </span>
          <img
            alt="social media icon"
            className="facebookIcon"
            src="test-file-stub"
          />
          <Meta
            integrationId={1}
            messageId="123"
            source={
              Object {
                "from": Object {
                  "address": "some_from_address",
                  "name": "some_from_name",
                },
                "to": Array [
                  Object {
                    "address": "some_from_address",
                    "name": "some_from_name",
                  },
                ],
                "type": "facebook-comment",
              }
            }
            via=""
          />
          <div
            className="right wrapper"
          >
            <Connect(DatetimeLabel)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </div>
        </div>
        <div
          className="row flexContainerColumn comment"
        >
          some comment
        </div>
      </div>
    </div>
  </CardBody>
</div>
`;

exports[`<CommentCard/> render should render the comment card 2`] = `
<div
  className="commentCard card"
>
  <CardBody
    tag="div"
  >
    <div
      className="row"
    >
      <div
        className="col-1 avatarContainer"
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
          url=""
        />
      </div>
      <div
        className="col-11"
      >
        <div
          className="row flexContainerRow metaInfo"
        >
          <span
            className="customerNameBody"
          >
            some_sender_firstname
             
            some_sender_lastname
          </span>
          <img
            alt="social media icon"
            className="instagramIcon"
            src="test-file-stub"
          />
          <Meta
            integrationId={1}
            messageId="123"
            source={
              Object {
                "from": Object {
                  "address": "some_from_address",
                  "name": "some_from_name",
                },
                "to": Array [
                  Object {
                    "address": "some_from_address",
                    "name": "some_from_name",
                  },
                ],
                "type": "facebook-comment",
              }
            }
            via=""
          />
          <div
            className="right wrapper"
          >
            <Connect(DatetimeLabel)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </div>
        </div>
        <div
          className="row flexContainerColumn comment"
        >
          some comment
        </div>
      </div>
    </div>
  </CardBody>
</div>
`;
